crates/weir-parser/src/snapshots/weir_parser__tests__parse_spawn.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn main
  params:
  returns: Unit
  body:
    (with-tasks (spawn (+ 1 2)))
)
