crates/weir-parser/src/snapshots/weir_parser__tests__parse_swap_bang.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn main
  params:
  returns: Unit
  body:
    (swap! a inc)
)
