crates/weir-parser/src/snapshots/weir_parser__tests__parse_threading_as_call.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn main
  params:
  returns: Unit
  body:
    (-> enemy .pos .x)
)
