crates/weir-parser/src/snapshots/weir_parser__tests__parse_try_operator.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn load
  params:
    path : String
  returns: (Result Data Error)
  body:
    (let
      bindings:
        data = (read-file path)?
      body:
        (Ok data)
    )
)
