crates/weir-parser/src/snapshots/weir_parser__tests__parse_vector_map.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn main
  params:
  returns: Unit
  body:
    (let
      bindings:
        v = [1 2 3]
        m = {":name" "Alice" ":age" 30}
      body:
        (println v)
    )
)
