crates/weir-parser/src/snapshots/weir_parser__tests__parse_with_arena.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn main
  params:
  body:
    (with-arena foo (+ 1 2))
)
