crates/weir-parser/src/snapshots/weir_parser__tests__parse_with_tasks.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn main
  params:
  returns: Unit
  body:
    (with-tasks (spawn (println 1)) (spawn (println 2)))
)
